[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.25"
colored = "2.0.0"
crypto-hash = "0.3.4"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
rand = "0.7.0"
serde = { verion = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
warp = "0.3.5"
